# tech_accidents

./: .gitignore  Dockerfile  LICENSE  README.md  Tech_accidents_readme.docx  alembic.ini  db_backups  env.example  main0.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tech_accident_db_local.db
infra/: .dockerignore  docker-compose-base.local.yml  docker-compose.local.yml
src/: __init__.py  application.py  run_api.py  settings.py
src/api/: constants.py  router.py  schemas.py  user_service.py  validators.py
src/api/endpoints/: __init__.py  files_attached.py  service_router.py  suspensions.py  tasks.py  test_router.py  user.py
src/api/schema/: __init__.py  file_attached.py  suspensions.py  tasks.py  users.py
src/api/services/: __init__.py  base.py  file_attached.py  suspension.py  task.py  users.py
src/core/: enums.py  utils.py
src/core/db/: __init__.py  db.py  models.py  user.py
src/core/db/migrations/: env.py
src/core/db/migrations/versions/: 2023_08_02_1010-8b45b75e5c7e_first_migration.py  2023_10_29_1606-a21e888d679c_first_migration.py  2024_02_24_1822-02_add_task.py  2024_04_27_0911-2e48d181cbda_add_relashionship_model_tasksfiles.py  2024_04_27_0940-3ad04465b2ec_add_relashionship_model_tasksfiles_blob.py  2024_06_30_1420-dbb158ca220f_add_relashionship_model_suspensionfiles.py
src/core/db/repository/: __init__.py  base.py  file_attached.py  suspension.py  task.py  users.py
src/core/exceptions/: __init__.py  exceptions.py
src/core/logging/: middleware.py  setup.py  setup_structlog.py  utils.py
src/services/: db_backup.py  register_connection_errors.py  test_connection.py
tests/: conftest.py
tests/test_routes/: test_attached_files.py  test_suspension.py  test_task.py  test_user.py  testfile.txt  testfile2.txt  testfile3.txt
