[tool.poetry]
name = "tech-accidents"
version = "0.1.0"
description = ""
authors = ["Артем Баландин <\"tom9981@yandex.ru>"]
readme = "README.md"
packages = [{include = "tech_accidents"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
